# cadence

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  package-lock.json  package.json  render.yaml  tsconfig.base.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  security-audit.yml
agent/: package.json  tsconfig.json
agent/src/: config.ts  index.ts  loop.ts  mandate.test.ts  mandate.ts  runtime.test.ts  runtime.ts  types.ts  units.test.ts  units.ts
contracts/: .gitignore  Cargo.toml  README.md  build-wasm.sh
contracts/access-control/: Cargo.toml  Odra.toml
contracts/access-control/src/: access_control.rs  contract.rs  errors.rs  events.rs  lib.rs  pausable.rs  roles.rs
contracts/access-control/tests/: rbac.rs
contracts/cep18/: Cargo.toml  Odra.toml
contracts/cep18/src/: token.rs
contracts/common/: Cargo.toml
contracts/common/src/: checked.rs  fee.rs  lib.rs  price.rs  scale.rs  slippage.rs
contracts/common/tests/: math.rs
contracts/dex-adapter/: Cargo.toml  Odra.toml
contracts/dex-adapter/src/: adapter.rs  cep18_swap.rs  lib.rs  settlement.rs
contracts/dex-adapter/src/adapter/: mod.rs  receipt.rs  trait_def.rs
contracts/dex-adapter/src/cep18_swap/: entrypoints.rs  mod.rs  storage.rs
contracts/dex-adapter/src/settlement/: entrypoints.rs  errors.rs  events.rs  mod.rs  preimage.rs  storage.rs
contracts/dex-adapter/tests/: cep18_swap.rs  settlement.rs
contracts/fee-module/: Cargo.toml  Odra.toml
contracts/fee-module/src/: errors.rs  events.rs  fees.rs  lib.rs  storage.rs
contracts/fee-module/tests/: fees.rs
contracts/guardian/: Cargo.toml  Odra.toml
contracts/guardian/src/: errors.rs  events.rs  guardian.rs  lib.rs  storage.rs
contracts/guardian/tests/: guardian.rs  integration_fanout.rs
contracts/price-oracle/: Cargo.toml  Odra.toml
contracts/price-oracle/src/: errors.rs  events.rs  lib.rs  oracle.rs  preimage.rs  signed_oracle.rs  types.rs
contracts/price-oracle/src/aggregator/: entrypoints.rs  errors.rs  median.rs  mod.rs  storage.rs
contracts/price-oracle/tests/: aggregator.rs  signed_oracle.rs
contracts/src/: vault.rs
contracts/treasury-multisig/: Cargo.toml  Odra.toml
contracts/treasury-multisig/src/: errors.rs  events.rs  lib.rs  multisig.rs  types.rs
contracts/treasury-multisig/tests/: multisig.rs
contracts/vault/: CHANGELOG.md  Cargo.toml  Odra.toml  README.md
contracts/vault-factory/: Cargo.toml  Odra.toml
contracts/vault-factory/src/: errors.rs  events.rs  factory.rs  lib.rs  storage.rs
contracts/vault-factory/tests/: factory.rs
contracts/vault-registry/: Cargo.toml  Odra.toml
contracts/vault-registry/src/: errors.rs  events.rs  lib.rs  registry.rs  types.rs
contracts/vault-registry/tests/: registry.rs
contracts/vault/src/: lib.rs  vault.rs
contracts/vault/src/vault/: admin.rs  constants.rs  entrypoints.rs  errors.rs  events.rs  execution.rs  guardrails.rs  lifecycle.rs  preimage.rs  status.rs  storage.rs  types.rs  views.rs
contracts/vault/tests/: guardrails.rs  integration_adapter.rs  integration_fee.rs  integration_guardian.rs  integration_oracle.rs  integration_settlement.rs  lifecycle.rs  signature.rs
contracts/vault/tests/common/: mod.rs
contracts/x402-token/: Cargo.toml  Odra.toml
contracts/x402-token/src/: errors.rs  lib.rs  preimage.rs  token.rs
dashboard/: .gitignore  index.html  package.json  playwright.config.ts  server.mjs  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/e2e/: create-mandate.spec.ts  final-report.spec.ts  live-execution.spec.ts
dashboard/src/: App.tsx  config.ts  main.tsx  (+2 more)
docs/: ROADMAP.md  TESTNET-CHECKLIST.md  claude.md  docs.md  prd.md
mandate/: package.json  tsconfig.json
scripts/: gen-wallets.mjs  package.json  tsconfig.json
(+98 files in other folders)
