[package]
name = "cadence_cep18"
version.workspace = true
edition.workspace = true

[dependencies]
odra = { workspace = true }

[dev-dependencies]
odra-test = { workspace = true }

[build-dependencies]
odra-build = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { workspace = true }

[[bin]]
name = "cadence_cep18_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "cadence_cep18_build_schema"
path = "bin/build_schema.rs"
test = false
