[package]
name = "cadence_vault"
version.workspace = true
edition.workspace = true

[dependencies]
odra = { workspace = true }
cadence-common = { path = "../common" }
cadence_access_control = { path = "../access-control", default-features = false }
cadence_dex_adapter = { path = "../dex-adapter", default-features = false }

[dev-dependencies]
odra-test = { workspace = true }
cadence-guardian = { path = "../guardian", default-features = false }
cadence-vault-registry = { path = "../vault-registry", default-features = false }

[build-dependencies]
odra-build = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { workspace = true }

[[bin]]
name = "cadence_vault_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "cadence_vault_build_schema"
path = "bin/build_schema.rs"
test = false
